# options-calculator-pro

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_REDESIGN_SUMMARY.md  README.md  comprehensive_syntax_fix.py  conftest.py  diagnostic.py  main.py  options_calculator_demo.html  pyproject.toml  quick_syntax_fix.py  refactoring.md  requirements.txt  run.sh  setup.sh  temp_init_fix.py
controllers/: __init__.py  analysis_controller.py  analysis_controller.py.backup.backup  history_controller.py  monte_carlo_controller.py  scanner_controller.py
core/: __init__.py  app.py  base_worker.py
docs/: ALPHA_RESEARCH_EARNINGS_CALENDARS_2026-02-22.md  CALENDAR_PICKER_PROMOTION_2026-05-27.md  DEPLOYMENT.md  EDGE_ANALYSIS_V1_STRUCTURE_SELECTOR_SPEC_2026-04-20.md  INSTITUTIONAL_BACKTEST_UPGRADE_2026-02-21.md  IV_CRUSH_SIGNAL_RESEARCH_2026-02-25.md  ORIGIN_STRATEGY_REVIEW_2026-02-21.md  PR71_STRADDLE_STRANGLE_PRIOR_LOADERS_DESIGN_2026-05-27.md  PR_AE_LIVE_EXIT_RESOLVER_DESIGN_2026-05-27.md  QUANT_CALC_AUDIT_2026-02-21.md  README.md  architectural-review-phases-2-5.md  architecture.md  diagnostics.md  evidence_automation.md  evidence_loop.md
models/: analysis_result.py  greeks.py  monte_carlo.py  option_data.py  trade_data.py  trading_config.py
plugins/: README.md  __init__.py  base_plugin.py  manager.py  my_complete_plugin.py  plugin_template.py
scripts/: adversarial_stress_test.py  analyze_replay_quartiles.py  audit_ivol_parquet_store.py  audit_t9_replay_readiness.py  audit_tradeability.py  backfill_prior_store_timestamps.py  backtest_calendar_exact.py  backtest_iv_expansion_study.py  backtest_pre_earnings_otm_strangle.py  backtest_strategy.py  (+42 more)
(+314 files in other folders)
