[project]
name = "options-calculator-pro"
version = "0.2.0"
description = "Single-ticker IV crush edge analysis and OOS robustness reports"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.6.0,<3.0",
    "yfinance>=0.2.36,<1.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "requests>=2.31.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "scikit-learn>=1.4.0,<2.0",
    "scipy>=1.12.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
