[project]
name = "options-calculator-pro"
version = "0.2.0"
description = "Single-ticker IV crush edge analysis and OOS robustness reports"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.6.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "yfinance>=1.3.0,<2.0",
    "lxml>=4.9.0,<7.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "requests>=2.31.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "duckdb>=1.5.1,<2.0.0",
    "scikit-learn>=1.4.0,<2.0",
    "scipy>=1.12.0,<2.0",
    "pytz>=2024.1",
    "psutil>=5.9.8,<8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<10.0",
    "httpx>=0.27.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
